feat:add status code for API's,  add bean validation and request validation handling